kubernetes/observability-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: observability
  labels:
    name: observability
spec: {}
