kubernetes/bar-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bar
  name: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  strategy: {}
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
      - image: localhost:5000/bar
        name: bar
        ports:
        - containerPort: 8080
