kubernetes/bar-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: bar
  name: bar
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: bar
  type: ClusterIP
