kubernetes/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: bar
            port:
              number: 8080
        path: /bar
        pathType: Exact
